--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,7 @@ body {
   padding-top: 50px;
   padding-bottom: 50px;
   background: #ffffff;
+  border-radius: 8px;
 }
 
 .form-sign-in .icon-header {
