--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,9 @@ body {
   font-weight: 500;
   color: #ffffff;
   margin-top: 30px;
+  -webkit-box-shadow: 0px 11px 15px -9px rgba(105, 98, 161, 1);
+  -moz-box-shadow: 0px 11px 15px -9px rgba(105, 98, 161, 1);
+  box-shadow: 0px 11px 15px -9px rgba(105, 98, 161, 1);
 }
 
 .btn-primary-tiketsaya:hover {
@@ -61,8 +64,14 @@ body {
   overflow: hidden; /* menggantikan height agar auto mengikuti tinggi konten*/
   padding-top: 50px;
   padding-bottom: 50px;
-  background: #ffffff;
   border-radius: 8px;
+  background: rgb(229, 229, 255);
+  background: linear-gradient(
+    333deg,
+    rgba(229, 229, 255, 0.49139280125195617) 12%,
+    rgba(237, 237, 255, 1) 36%,
+    rgba(255, 255, 255, 1) 63%
+  );
 }
 
 .form-sign-in .icon-header {
