show and hide admin profile

--- a/src/style.css
+++ b/src/style.css
@@ -159,12 +159,13 @@ body {
   background: rgb(246, 247, 251);
   background: linear-gradient(
     5deg,
-    rgba(246, 247, 251, 1) 0%,
-    rgba(255, 255, 255, 1) 76%
+    rgba(246, 247, 251, 1) 23%,
+    rgba(255, 255, 255, 1) 74%
   );
 }
 
 .form-sign-in .icon-header {
+  margin-top: 6%;
   margin-left: auto;
   margin-right: auto;
   display: block;
